# SimpleRenderer

./: CMakeLists.txt  README.md
hardwarebuffer/: CMakeLists.txt  ColorValue.h  HardwareBuffer.h  HardwareBufferManager.cpp  HardwareBufferManager.h  HardwareTextureBuffer.cpp  HardwareTextureBuffer.h  HardwareVertexBuffer.h  PixelBox.h  PixelUtil.cpp  PixelUtil.h  PrimitiveData.cpp  VertexBufferBinding.h  VertexElement.cpp  VertexElement.h
math/: Box3D.h  CMakeLists.txt  Frustum.cpp  Matrix4D.h  Ray.cpp  Sphere3D.cpp  Sphere3D.h  Vector3D.h
src/: CMakeLists.txt
src/assets/shader/: basic.fs  basic.vs  basicMaterial.fs  basicMaterial.vs  billboard.fs  billboard.gs  billboard.vs  groundfromatmosphere.fs  groundfromatmosphere.vs  groundfromspace.fs  groundfromspace.vs  multi_lighting.fs  multi_lighting.vs  particle_upate.gs  particle_upate.vs  phongMaterial.fs  phongMaterial.vs  pointshadowmapdepth.fs  pointshadowmapdepth.gs  pointshadowmapdepth.vs  quad_depth.fs  quad_depth.vs  read.fs  read.vs  shadow_map.fs  shadow_map.vs  shadow_map_depth.fs  shadow_map_depth.vs  shadowmapdepth.fs  shadowmapdepth.vs  skybox.fs  skybox.vs  skyfromatmosphere.fs  skyfromatmosphere.vs  skyfromspace.fs  skyfromspace.vs  skyfromspace1.vs
src/assets/texture/: terrain0-16bbp-257x257.raw
src/example/: CMakeLists.txt  RENDERER_TEST.cpp  TEST_MATH_MATRIX4D.cpp  TEST_TEXTURE.cpp
src/graphic/: CMakeLists.txt  Scene.cpp  Scene.h  Win.cpp  Win.h
src/graphic/render/: Constants.h  FrameBuffer.cpp  FrameBuffer.h  RenderState.cpp  RenderState.h  RenderSystem.cpp  RenderSystem.h  Shader.cpp  Shader.h  Uniform.h
src/hardwarebuffer/: CMakeLists.txt  ColorValue.cpp  HardwareIndexBuffer.cpp  HardwareIndexBuffer.h  HardwareTextureBuffer.cpp  HardwareVertexBuffer.cpp  PixelBox.cpp  PrimitiveData.h  VertexBufferBinding.cpp  VertexDeclaration.cpp  VertexDeclaration.h
src/light/: CMakeLists.txt  DirectionLight.cpp  DirectionLight.h  HemisphereLight.h  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
src/math/: Box3D.cpp  Frustum.h  Matrix3D.cpp  Matrix3D.h  Matrix4D.cpp  Plane3D.cpp  Plane3D.h  Quaternion.cpp  Quaternion.h  Ray.h  Vector2D.h  Vector3D.cpp  Vector4D.cpp  Vector4D.h
src/object/: CMakeLists.txt  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object3D.cpp  Object3D.h  RenderObject.cpp  RenderObject.h  Skybox.cpp  Skybox.h  Terrain.h  TerrainTile.h  TerrianTile.cpp
src/object/camera/: Camera.cpp  Camera.h  OrthographicCamera.h  PerspectiveCamera.h  ViewPort.h
src/texture/: CMakeLists.txt  Image.cpp  Image.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  TextureUnitState.cpp  TextureUnitState.h
src/tools/: CMakeLists.txt  GeometryFactory.cpp  GeometryFactory.h  PerlinNoiseTerrainBuilder.cpp  PerlinNoiseTerrainBuilder.h  PickTool.cpp  PickTool.h  RayCaster.cpp  RayCaster.h
src/utils/: AnyValue.h  CMakeLists.txt  CamerControl.h  CameraControl.cpp  Event.cpp  Event.h  FirstPersonController.h  InputDefine.h  KeyBoardConfig.h  MathHelper.cpp  MathHelper.h  Parameter.h  StringHelper.cpp  StringHelper.h  UtilsHelp.cpp  UtilsHelp.h
test/: CMakeLists.txt  TEST_MATH_MATRIX4D.cpp
